meego-keyboard (0.7.1~1) unstable; urgency=low

  * Fixes: NB#264453 - VKB; Enter key is dimmed after tapping on Quick Cangjie toggle button.

 -- Zongxin Wang <ext-zongxin.wang@nokia.com>  Mon, 25 Jul 2011 13:29:22 +0300

meego-keyboard (0.7.0-1) unstable; urgency=low

  * Fixes: NB#219163 - [TASK] Cyrillic languages apart from Russian/Ukranian get latin phone number layout
  * Fixes: NB#261490 - [TASK] Implement transition between magnifier and extended keys

 -- huaming wang <huaming.wang@nokia.com>  Tue, 19 Jul 2011 11:14:01 +0300

meego-keyboard (0.6.16-1) unstable; urgency=low

  * Fixes: NB#264297
  * Fixes: NB#266446

 -- Aapo Kojo <aapo.kojo@nokia.com>  Tue, 21 Jun 2011 09:11:03 +0300

meego-keyboard (0.6.15-1) unstable; urgency=low

  * Fixes: NB#254893 - Search suggestion is not updated for Google...

 -- Aapo Kojo <aapo.kojo@nokia.com>  Thu, 16 Jun 2011 13:33:58 +0300

meego-keyboard (0.6.14-1) unstable; urgency=low

  * Fixes: NB#258652 - Keyboard language notification is not according to layout guide

 -- Ning Chi <ext-chi.2.ning@nokia.com>  Tue, 14 Jun 2011 11:11:38 +0300

meego-keyboard (0.6.13-1) unstable; urgency=low

  * Fixes: NB#259907 - VKB Transition is not smooth while changing device orientation from portrait to landscape.

 -- Viacheslav Sobolev <ext-viacheslav.sobolev@nokia.com>  Fri, 10 Jun 2011 10:25:58 +0300

meego-keyboard (0.6.12-1) unstable; urgency=low

  * Fixes: NB#261480 - [TASK] Don't show VKB language notification when focusing in text fields

 -- Ning Chi <ext-chi.2.ning@nokia.com>  Wed, 08 Jun 2011 10:06:46 +0300

meego-keyboard (0.6.11-1) unstable; urgency=low

  * Fixes: NB#261859
  * Fixes: NB#257133 - Some keys get stuck in Sym View.
  * Fixes: NB#259583 - It is not possible to type letter ÿ with VKB
  * Fixes: NB#261831 - [TASK] Remove caps lock notification from virtual keyboard
  * Fixes: NB#257418 - VKB keys can get stuck

 -- Mohammad Anwari <Mohammad.Anwari@nokia.com>  Tue, 07 Jun 2011 14:04:14 +0300
